force-app/main/default/objects/Shipping__c/Shipping__c.object-meta.xml
<CustomObject>
    <label>Shipping</label>
    <nameField>
        <label>Shipping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>