force-app/main/default/objects/Shipping__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <label>Courier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>