force-app/main/default/objects/Shipping__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>ZipCode</label>
    <type>Phone</type>
</CustomField>